Added Signup and Login Page, no auth yet

--- a/TODO
+++ b/TODO
@@ -19,3 +19,5 @@
     Accessibility: Ensure your website follows best practices for accessibility, such as proper use of ARIA attributes, semantic HTML, and keyboard navigation.
 
     Deployment: Deploy your website to a hosting provider, configure a custom domain, and set up SSL for secure connections.
+
+    Don't forget forgot password, condense header bar into a dropdown menu
