Adding to listings table works

--- a/TODO
+++ b/TODO
@@ -21,3 +21,5 @@
     Deployment: Deploy your website to a hosting provider, configure a custom domain, and set up SSL for secure connections.
 
     Don't forget forgot password, condense header bar into a dropdown menu
+
+    Add Validation for Listings, Find out whether you can do action and on:submit or if that is bad practice
