Working on Listings, needs to update page number and page size, load must be run on change

--- a/TODO
+++ b/TODO
@@ -23,3 +23,4 @@
     Don't forget forgot password, condense header bar into a dropdown menu
 
     Add Validation for Listings, Find out whether you can do action and on:submit or if that is bad practice
+    Add authentication for users, weigh in supabase vs lucia
