Changed Layout AppBar

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 
 - [x] Create Protected Routes
 - [] Add Rate Limiting
-- [] Migrate To Dropdown Menu
+- [x] Migrate To Dropdown Menu
 - [] Create Mobile Version of Site
 - [] Add Image Loading to Listings from Storage
 - [] Add Sending Messages to Listing
